Bug 424193 - Viewfinder has a red overlay
Summary: Viewfinder has a red overlay
Status: RESOLVED FIXED
Alias: None
Product: kamoso
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.08
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-07-14 13:01 UTC by Chandradeep Dey
Modified: 2020-11-25 01:51 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
red (612.88 KB, image/png)
2020-07-14 16:15 UTC, Chandradeep Dey
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Chandradeep Dey 2020-07-14 13:01:11 UTC
SUMMARY
Title. The captured photos are fine though.

STEPS TO REPRODUCE
1. Open Kamoso

OBSERVED RESULT
Everything is red


EXPECTED RESULT
Only red objects should be red?


SOFTWARE/OS VERSIONS
Linux: 5.7.8-arch1-1
KDE Plasma Version: 5.19.3
KDE Frameworks Version: 5.72.0
Qt Version: 5.15.0
Comment 1 Nate Graham 2020-07-14 16:02:27 UTC
That's odd. Can you attach a screenshot?
Comment 2 Chandradeep Dey 2020-07-14 16:15:46 UTC
Created attachment 130118 [details]
red

for comparison - https://www.amazon.in/dp/8131533026/
Comment 3 Nate Graham 2020-07-14 16:35:02 UTC
Thanks!
Comment 4 Chandradeep Dey 2020-07-14 16:41:52 UTC
No problem
Comment 5 Patrick Silva 2020-08-29 23:37:31 UTC
I can confirm this issue on neon unstable.
Gnome Cheese installed on the same system is not affected.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.19.80
KDE Frameworks Version: 5.74.0
Qt Version: 5.14.2
Comment 6 Achmad Fathoni 2020-09-10 03:58:31 UTC
(In reply to Patrick Silva from comment #5)
> I can confirm this issue on neon unstable.
> Gnome Cheese installed on the same system is not affected.
> 
> Operating System: KDE neon Unstable Edition
> KDE Plasma Version: 5.19.80
> KDE Frameworks Version: 5.74.0
> Qt Version: 5.14.2

Also confirm in EndeavourOS, cheese looks fine. And kamoso show black screen after second use. Unless I type sudo.
Comment 7 Patrick Silva 2020-09-28 13:13:47 UTC
I have just noticed that this bug does not occur when I run Cheese and Kamoso at the same time.

open Cheese
open Kamoso

Kamoso shows webcam image without red overlay and without lag.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.20.80
KDE Frameworks Version: 5.75.0
Qt Version: 5.15.0
Comment 8 Sayan Chakroborty 2020-10-23 08:47:30 UTC
I have had this issue for some time but today I installed Arch on my system and noticed that Kamoso is working fine without any workarounds.

ArchLinux

KDE Plasma 5.20.1

KDE Frameworks 5.75.0

QT 5.15.1

Kernel 5.9.1

Kamoso 20.08.2

I am not sure whether the latest build of Kamoso (20.08.2) or the latest Kernel (5.9.1) fixed it but as Nate said it's hardware specific I'm gonna guess it's the Kernel that fixed it.

Also on ArchLinux using Kernel 5.8 (probably earlier versions too) Kamoso had an option in settings for changing camera where in my system I had two identically named options of which one used to produce the Red Overlay issue while the other one would produce normal viewfinder but then after selecting the working camera if I closed and reopened Kamoso there were no such settings to change camera and the viewfinder would be blank. Also this changing camera option was only available on ArchLinux (not in Kubuntu, Neon, openSUSE Tumbleweed, Fedora).

I hope this helps.
Comment 9 broekhoff.jochem 2020-10-23 09:02:43 UTC
> I have had this issue for some time but today I installed Arch on my system
> and noticed that Kamoso is working fine without any workarounds.

I'm on ArchLinux and have the exact same software versions installed as Sayan, however, I'm still having this red overlay. So if the kernel has fixed something, it definitely did not fix everything.
Comment 10 Aleix Pol 2020-11-25 01:51:26 UTC
Git commit fc5ec930e0b342b3936b57f390bafa60c23edf3f by Aleix Pol.
Committed on 25/11/2020 at 01:51.
Pushed by apol into branch 'release/20.12'.

Do not follow the color matrix path that makes it look red

For some reason, GST_VIDEO_COLOR_MATRIX_BT709 seems to be requested for
some cameras unnecessarily.
I can see this addressing using it with ElGato CamLink 4K together with
a Sony a5100.

M  +9    -6    src/elements/gstqtvideosink/painters/videomaterial.cpp

https://invent.kde.org/multimedia/kamoso/commit/fc5ec930e0b342b3936b57f390bafa60c23edf3f