Do not follow the color matrix path that makes it look red

For some reason, GST_VIDEO_COLOR_MATRIX_BT709 seems to be requested for
some cameras unnecessarily.
I can see this addressing using it with ElGato CamLink 4K together with
a Sony a5100.

BUG: 424193